# good-research-using-conda

./: .gitignore  README.md  pyproject.toml
notebooks/: results.ipynb
output/: summary.csv
output/raw_counts/: dracula.csv  frakenstein.csv  jayne-eyre.csv
tests/: sample_data.txt  test_fit_distribution.py  test_parse_text.py  test_zipfs_law.py
zipfs_law/: cli.py  fit_distribution.py  inputoutput.py  parse_text.py
