[tool.poetry]
name = "zipfs-law"
version = "0.1.0"
description = ""
authors = ["Ewan Nicolson <ewan.nicolson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
pandas = "^1.3.5"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
zipfs-law = "zipfs_law.cli:main"
